# guile-agentx

./: .gitignore  AUTHORS  INSTALL  Makefile.am  README  autogen.sh  check.scm  codec.scm  configure.ac  decode.scm  encode.scm  example.scm  net.scm  session.scm  simple.scm  tests.scm  tools.scm
agentx/: Makefile.am  decode.scm  encode.scm  net.scm  session.scm  tools.scm
build-aux/: git-version-gen
